added button with link to github. temp website

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Like I Give A F$#% - Browser Plugin for Facebook</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,700|Montserrat:700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -17,11 +17,23 @@
         <!-- Like I Give A F$#% -->
         <div class="container">
             <img src="icon.svg">
+            <div class="content">
+                <h1>Like I Give a Fuck</h1>
+                <p><strong>Browser Plugin for Facebook</strong></p>
+                <p>Every day millions of «likes» are given on Facebook. But how many people actually like what they «like» on Facebook?</p> 
+                <p>«Liking» something has become a synonym for acknowledging something. You either «like» or you don't care – to say it in other words: you give a fuck or you don't give a fuck.</p>
+                <p>This browser plugin fixes the mismatch of «Like« and «care» by changing every occurance of «Like» on  facebook.com to «I give a Fuck».</p>
+                <p>
+                    <!--<a href="#" class="btn btn-download firefox">Download for Firefox</a>
+                    <a href="#" class="btn btn-download chrome">Download for Chrome</a>
+                    <a href="#" class="btn btn-download ie">Download for IE</a>-->
+                    <a class="button" href="https://github.com/fabsrc/like-i-give-a-fuck/tree/master/output">Download it on Github now</a>
+                </p>
+            </div>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/bowser.js"></script>
+        <script src="js/main.js"></script>
         <script>
           (function() {
 
