Changed Download link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <!--<a href="#" class="btn btn-download firefox">Download for Firefox</a>
                     <a href="#" class="btn btn-download chrome">Download for Chrome</a>
                     <a href="#" class="btn btn-download ie">Download for IE</a>-->
-                    <a class="button" href="https://github.com/fabsrc/like-i-give-a-fuck/tree/master/output">Download it on Github now</a>
+                    <a class="button" href="https://github.com/fabsrc/like-i-give-a-fuck">Get it on Github now</a>
                 </p>
             </div>
         </div>
