--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <p>«Liking» something has become a synonym for acknowledging something. You either «like» or you don't care – to say it in other words: you give a fuck or you don't give a fuck.</p>
                 <p>This browser plugin fixes the mismatch of «Like« and «care» by changing every occurance of «Like» on  facebook.com to «I give a Fuck».</p>
                 <p>
-                    <a href="https://addons.mozilla.org/de/firefox/addon/like-i-give-a-fuck/" class="btn btn-download firefox">Download for Firefox</a>
-                    <a href="https://chrome.google.com/webstore/detail/like-i-give-a-f/ohfpnpgiljfbmnibfpoieckbmhaagogf" class="btn btn-download chrome">Download for Chrome</a>
+                    <a class="button btn-download firefox" href="https://addons.mozilla.org/de/firefox/addon/like-i-give-a-fuck/">Download for Firefox</a>
+                    <a class="button btn-download chrome" href="https://chrome.google.com/webstore/detail/like-i-give-a-f/ohfpnpgiljfbmnibfpoieckbmhaagogf">Download for Chrome</a>
                     <!--<a href="#" class="btn btn-download ie">Download for IE</a>-->
                     <a class="button" href="https://github.com/fabsrc/like-i-give-a-fuck">Get it on Github now</a>
                 </p>
