--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <footer class="page-footer">
           <p>Copyright © <script>document.write(new Date().getFullYear())</script> <a href="https://github.com/fabsrc">Fabian Schneider</a>. Licensed under the <a href="http://wtfpl.net/">WTFPL</a> license.</p>
-          <p>Built with <a href="https://mustache.github.io/">Mustache</a>, <a href="https://github.com/mzabriskie/axios">Axios</a> &amp; <a href="https://github.com/ded/bowser">Bowser</a>. Example data by <a href="http://hipsterjesus.com/">Hipsterjesus</a> &amp; <a href="https://randomuser.me/">Random User Generator</a>.</p>
+          <p> Example data by <a href="https://baconipsum.com/">Bacon Ipsum</a> &amp; <a href="https://randomuser.me/">Random User Generator</a>.</p>
         </footer>
 
       </div>
